@@ -16,6 +16,7 @@
 
 package org.springframework.ai.vectorstore;
 
+import java.time.Duration;
 import java.util.Collections;
 import java.util.Iterator;
 import java.util.List;
@@ -24,22 +25,28 @@ import java.util.UUID;
 
 import javax.sql.DataSource;
 
+import com.theokanning.openai.client.OpenAiApi;
+import com.theokanning.openai.service.OpenAiService;
 import com.zaxxer.hikari.HikariDataSource;
 import org.junit.Assert;
+import org.junit.jupiter.api.condition.EnabledIfEnvironmentVariable;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.ValueSource;
 import org.testcontainers.containers.GenericContainer;
 import org.testcontainers.junit.jupiter.Container;
 import org.testcontainers.junit.jupiter.Testcontainers;
+import retrofit2.Retrofit;
+import retrofit2.adapter.rxjava2.RxJava2CallAdapterFactory;
+import retrofit2.converter.jackson.JacksonConverterFactory;
 
-import org.springframework.ai.autoconfigure.openai.OpenAiAutoConfiguration;
+import org.springframework.ai.ResourceUtils;
 import org.springframework.ai.document.Document;
 import org.springframework.ai.embedding.EmbeddingClient;
+import org.springframework.ai.openai.embedding.OpenAiEmbeddingClient;
 import org.springframework.ai.vectorstore.PgVectorStore.PgIndexType;
 import org.springframework.ai.vectorstore.filter.FilterExpressionTextParser.FilterExpressionParseException;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.boot.SpringBootConfiguration;
-import org.springframework.boot.autoconfigure.AutoConfigurations;
 import org.springframework.boot.autoconfigure.EnableAutoConfiguration;
 import org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration;
 import org.springframework.boot.autoconfigure.jdbc.DataSourceProperties;
@@ -57,6 +64,7 @@ import static org.assertj.core.api.Assertions.assertThat;
  * @author Christian Tzolov
  */
 @Testcontainers
+@EnabledIfEnvironmentVariable(named = "OPENAI_API_KEY", matches = ".+")
 public class PgVectorStoreIT {
 
 	@Container
@@ -66,17 +74,13 @@ public class PgVectorStoreIT {
 		.withExposedPorts(5432);
 
 	List<Document> documents = List.of(
-			new Document("Spring AI rocks!! Spring AI rocks!! Spring AI rocks!! Spring AI rocks!! Spring AI rocks!!",
-					Collections.singletonMap("meta1", "meta1")),
-			new Document("Hello World Hello World Hello World Hello World Hello World Hello World Hello World"),
-			new Document(
-					"Great Depression Great Depression Great Depression Great Depression Great Depression Great Depression",
-					Collections.singletonMap("meta2", "meta2")));
+			new Document(ResourceUtils.getText("classpath:/test/data/spring.ai.txt"), Map.of("meta1", "meta1")),
+			new Document(ResourceUtils.getText("classpath:/test/data/time.shelter.txt")),
+			new Document(ResourceUtils.getText("classpath:/test/data/great.depression.txt"), Map.of("meta2", "meta2")));
 
 	private final ApplicationContextRunner contextRunner = new ApplicationContextRunner()
 		.withUserConfiguration(TestApplication.class)
-		.withPropertyValues("spring.ai.openai.apiKey=" + System.getenv("OPENAI_API_KEY"),
-				"test.spring.ai.vectorstore.pgvector.distanceType=CosineDistance",
+		.withPropertyValues("test.spring.ai.vectorstore.pgvector.distanceType=CosineDistance",
 
 				// JdbcTemplate configuration
 				String.format("app.datasource.url=jdbc:postgresql://localhost:%d/%s",
@@ -92,27 +96,26 @@ public class PgVectorStoreIT {
 	@ParameterizedTest(name = "{0} : {displayName} ")
 	@ValueSource(strings = { "CosineDistance", "EuclideanDistance", "NegativeInnerProduct" })
 	public void addAndSearch(String distanceType) {
-		contextRunner.withConfiguration(AutoConfigurations.of(OpenAiAutoConfiguration.class))
-			.withPropertyValues("test.spring.ai.vectorstore.pgvector.distanceType=" + distanceType)
+		contextRunner.withPropertyValues("test.spring.ai.vectorstore.pgvector.distanceType=" + distanceType)
 			.run(context -> {
 
 				VectorStore vectorStore = context.getBean(VectorStore.class);
 
 				vectorStore.add(documents);
 
-				List<Document> results = vectorStore.similaritySearch(SearchRequest.query("Great").withTopK(1));
+				List<Document> results = vectorStore
+					.similaritySearch(SearchRequest.query("What is Great Depression").withTopK(1));
 
 				assertThat(results).hasSize(1);
 				Document resultDoc = results.get(0);
 				assertThat(resultDoc.getId()).isEqualTo(documents.get(2).getId());
-				assertThat(resultDoc.getContent()).isEqualTo(
-						"Great Depression Great Depression Great Depression Great Depression Great Depression Great Depression");
 				assertThat(resultDoc.getMetadata()).containsKeys("meta2", "distance");
 
 				// Remove all documents from the store
 				vectorStore.delete(documents.stream().map(doc -> doc.getId()).toList());
 
-				List<Document> results2 = vectorStore.similaritySearch(SearchRequest.query("Great").withTopK(1));
+				List<Document> results2 = vectorStore
+					.similaritySearch(SearchRequest.query("Great Depression").withTopK(1));
 				assertThat(results2).hasSize(0);
 
 				dropTable(context);
@@ -123,8 +126,7 @@ public class PgVectorStoreIT {
 	@ValueSource(strings = { "CosineDistance", "EuclideanDistance", "NegativeInnerProduct" })
 	public void searchWithFilters(String distanceType) {
 
-		contextRunner.withConfiguration(AutoConfigurations.of(OpenAiAutoConfiguration.class))
-			.withPropertyValues("test.spring.ai.vectorstore.pgvector.distanceType=" + distanceType)
+		contextRunner.withPropertyValues("test.spring.ai.vectorstore.pgvector.distanceType=" + distanceType)
 			.run(context -> {
 
 				VectorStore vectorStore = context.getBean(VectorStore.class);
@@ -185,8 +187,7 @@ public class PgVectorStoreIT {
 	@ValueSource(strings = { "CosineDistance", "EuclideanDistance", "NegativeInnerProduct" })
 	public void documentUpdate(String distanceType) {
 
-		contextRunner.withConfiguration(AutoConfigurations.of(OpenAiAutoConfiguration.class))
-			.withPropertyValues("test.spring.ai.vectorstore.pgvector.distanceType=" + distanceType)
+		contextRunner.withPropertyValues("test.spring.ai.vectorstore.pgvector.distanceType=" + distanceType)
 			.run(context -> {
 
 				VectorStore vectorStore = context.getBean(VectorStore.class);
@@ -224,10 +225,10 @@ public class PgVectorStoreIT {
 
 	@ParameterizedTest(name = "{0} : {displayName} ")
 	@ValueSource(strings = { "CosineDistance", "EuclideanDistance", "NegativeInnerProduct" })
+	// @ValueSource(strings = { "CosineDistance" })
 	public void searchWithThreshold(String distanceType) {
 
-		contextRunner.withConfiguration(AutoConfigurations.of(OpenAiAutoConfiguration.class))
-			.withPropertyValues("test.spring.ai.vectorstore.pgvector.distanceType=" + distanceType)
+		contextRunner.withPropertyValues("test.spring.ai.vectorstore.pgvector.distanceType=" + distanceType)
 			.run(context -> {
 
 				VectorStore vectorStore = context.getBean(VectorStore.class);
@@ -235,29 +236,24 @@ public class PgVectorStoreIT {
 				vectorStore.add(documents);
 
 				List<Document> fullResult = vectorStore
-					.similaritySearch(SearchRequest.query("Great").withTopK(5).withSimilarityThresholdAll());
-
-				List<Float> distances = fullResult.stream()
-					.map(doc -> (Float) doc.getMetadata().get("distance"))
-					.toList();
+					.similaritySearch(SearchRequest.query("Time Shelter").withTopK(5).withSimilarityThresholdAll());
 
 				assertThat(fullResult).hasSize(3);
 
 				assertThat(isSortedByDistance(fullResult)).isTrue();
 
-				fullResult.stream().forEach(doc -> System.out.println(doc.getMetadata().get("distance")));
+				List<Float> distances = fullResult.stream()
+					.map(doc -> (Float) doc.getMetadata().get("distance"))
+					.toList();
 
 				float threshold = (distances.get(0) + distances.get(1)) / 2;
 
-				List<Document> results = vectorStore
-					.similaritySearch(SearchRequest.query("Great").withTopK(5).withSimilarityThreshold(1 - threshold));
+				List<Document> results = vectorStore.similaritySearch(
+						SearchRequest.query("Time Shelter").withTopK(5).withSimilarityThreshold(1 - threshold));
 
 				assertThat(results).hasSize(1);
 				Document resultDoc = results.get(0);
-				assertThat(resultDoc.getId()).isEqualTo(documents.get(2).getId());
-				assertThat(resultDoc.getContent()).isEqualTo(
-						"Great Depression Great Depression Great Depression Great Depression Great Depression Great Depression");
-				assertThat(resultDoc.getMetadata()).containsKeys("meta2", "distance");
+				assertThat(resultDoc.getId()).isEqualTo(documents.get(1).getId());
 
 				dropTable(context);
 			});
@@ -311,6 +307,20 @@ public class PgVectorStoreIT {
 		@Bean
 		public HikariDataSource dataSource(DataSourceProperties dataSourceProperties) {
 			return dataSourceProperties.initializeDataSourceBuilder().type(HikariDataSource.class).build();
+		}
+
+		@Bean
+		public EmbeddingClient embeddingClient() {
+
+			Retrofit retrofit = new Retrofit.Builder().baseUrl("https://api.openai.com")
+				.client(OpenAiService.defaultClient(System.getenv("OPENAI_API_KEY"), Duration.ofSeconds(60)))
+				.addConverterFactory(JacksonConverterFactory.create(OpenAiService.defaultObjectMapper()))
+				.addCallAdapterFactory(RxJava2CallAdapterFactory.create())
+				.build();
+
+			OpenAiApi api = retrofit.create(OpenAiApi.class);
+
+			return new OpenAiEmbeddingClient(new OpenAiService(api), "text-embedding-ada-002");
 		}
 
 	}
